objects/Pay_Address__c.object
<CustomObject>
    <fields>
        <fullName>BLN_Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>Pay_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLN_State__c</fullName>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipName>Pay_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipName>Pay_Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <label>Department Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>Pay_Addresses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GN_User__c</fullName>
        <label>GN User</label>
        <referenceTo>GN_User__c</referenceTo>
        <relationshipName>Pay_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_Name__c</fullName>
        <label>Person Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Street1_Address__c</fullName>
        <label>Street1 Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street2_Address__c</fullName>
        <label>Street2 Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>BLN Pay Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Event__c</columns>
        <columns>Phone__c</columns>
        <columns>Street1_Address__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PA-{00000000}</displayFormat>
        <label>Pay Address Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Pay Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>